fix z-index on create listing element

--- a/app/assets/stylesheets/components/new_room_form.scss
+++ b/app/assets/stylesheets/components/new_room_form.scss
@@ -129,7 +129,3 @@ html, body {
     }
   }
 }
-
-.dropzone-default-option {
-  z-index: 50000;
-}
